--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,27 +3,45 @@ name: build and test
 on:
   push:   
   pull_request:
-    branches: [ "main" ]
-    
-env:
-  DOTNET_VERSION: '6.0.x'
+    branches: [ "main" ]   
+
+  
 jobs:
-  build-and-test:
-    name: build-and-test-${{matrix.os}}
-    runs-on: ${{ matrix.os }}
+  build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        configuration: [Debug, Release]
+
+    runs-on: windows-latest                              
+
+    env:
+      Solution_Name: AnimalsTest.sln                        
+      Test_Project_Path: TestAnimals/TestAnimals/.csproj             
+     
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+    - name: Checkout
+      uses: actions/checkout@v3
       with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
-    - name: Install dependencies
-      run: dotnet restore
-    - name: Project run
-      run: dotnet run
+        fetch-depth: 0
+
+  
+    - name: Install .NET 
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 6.0.x
+
+  
+    - name: Setup MSBuild.exe
+      uses: microsoft/setup-msbuild@v1.0.2
+
+
     - name: Test
       run: dotnet test --no-restore --verbosity normal
+
+  
+    - name: Restore the application
+      run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
+      env:
+        Configuration: ${{ matrix.configuration }}
+    
       
