--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
       
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
+    - name: Run
+      run: dotnet run
 
     - name: Test
       run: dotnet test --no-restore --verbosity normal
