--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,7 +35,7 @@ jobs:
       uses: microsoft/setup-msbuild@v1.0.2
       
     - name: Run
-      run: dotnet run
+      run: dotnet run --project $env:Solution_Name
 
     - name: Test
       run: dotnet test --no-restore --verbosity normal
