--- a/AnimalsTest/AnimalsTest.csproj
+++ b/AnimalsTest/AnimalsTest.csproj
@@ -12,9 +12,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <AssemblyAttribute Include="System.CLSCompliant">
+    <AssemblyAttribute Include="System.CLSCompliant" >
+      <_Parameter1_IsLiteral>true</_Parameter1_IsLiteral>
       <_Parameter1>true</_Parameter1>
     </AssemblyAttribute>
+
     <Compile Update="Program.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
