--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,6 +34,9 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2      
    
+    - name: Run
+      run: dotnet run --project $env:Solution_Name
+   
 
     - name: Test
       run: dotnet test --no-restore --verbosity normal
