--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix:
-        configuration: [Debug, Release]
+        configuration: [Debug]
 
     runs-on: windows-latest                              
 
@@ -35,8 +35,8 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2      
    
-    - name: Run
-      run: dotnet run --project $env:Project_Path
+    - name: Build
+      run: dotnet build
    
 
     - name: Test
